# OpenOBD

./: .gitignore  .gitmodules  .travis.yml  .~lock.pids.xlsx#  CMakeLists.txt  LICENSE  README.md  diagnose odb2.xml  mod_diagnose odb2.xml  pids.xlsx
can/: references.txt  start_usb_can.sh
configuration/: dtcConfig.json  pidConfig.json  pidConfig_with_formulas_deprecated.json
doc/: Simple Skript Creator.ods  largescript  script
hardware/openelm/: openelm-cache.lib  openelm.bak  openelm.sch
include/: easylogging++.h  json.hpp
include/linux/can/: isotp.h
lib/: easylogging++.cc
src/: Config.cpp  Config.h  Pid.cpp  Pid.h  Service.h  Vehicle.cpp  Vehicle.h  main.cpp
src/CAN/: CanIsoTP.cpp  CanIsoTP.h  ComHandler.cpp  ComHandler.h  ELM327.cpp  ELM327.h  ELM327WifiClient.cpp  ELM327WifiClient.h  ELM327WifiServer.cpp  ELM327WifiServer.h  ICommunicationInterface.h  SocketCommunicationBase.cpp  SocketCommunicationBase.h
src/OBD/: DataTroubleCode.cpp  DataTroubleCode.h  OBDHandler.cpp  OBDHandler.h  Pid.cpp  Pid.h  PidCollection.cpp  PidCollection.h  Service.h
src/OBD/data/: CalculatedDataObject.h  CalculatedValues.cpp  CalculatedValues.h  DataObject.h  DataObjectDescription.cpp  DataObjectDescription.h  OBDTest.cpp  OBDTest.h
src/OBD/data/BitEncoded/: BankOxygenSensor.cpp  BankOxygenSensor.h  Catalyst.cpp  Catalyst.h  Engine.cpp  Engine.h  FreezeDTC.cpp  FreezeDTC.h  FuelRailOxygenSensor.cpp  FuelRailOxygenSensor.h  MonitorStatus.cpp  MonitorStatus.h  OBDCompliance.cpp  OBDCompliance.h  OxygenSystem.cpp  OxygenSystem.h  PidSupport.cpp  PidSupport.h  Throttle.cpp  Throttle.h
src/OBD/data/BitEncoded/Oxygen/: BankOxygenSensor.cpp  BankOxygenSensor.h  BankOxygenSensors4BankCollection.cpp  BankOxygenSensors4BankCollection.h  BankOxygenSensorsCollection.cpp  BankOxygenSensorsCollection.h  ExtendedRangeOxygenSensor.cpp  ExtendedRangeOxygenSensor.h  FuelRailOxygenSensor.cpp  FuelRailOxygenSensor.h  OxygenSensors.cpp  OxygenSensors.h  OxygenSystem.cpp  OxygenSystem.h
src/OBD/data/BitEncoded/Pid/: PidSupport.cpp  PidSupport.h  SupportedPidCollection.cpp  SupportedPidCollection.h
src/OBD/data/Enumerated/: FuelSystemStates.cpp  FuelSystemStates.h  FuelSystemStatus.h  StateOfCommandedSecondaryAir.h  StateOfFuelSystem.h
src/OBD/data/dataObject/: CalculatedDataObject.h  CalculatedDataObjectFactory.cpp  CalculatedDataObjectFactory.h  CalculatedValues.cpp  CalculatedValues.h  DataObject.h  DataObjectDescription.h  DataObjectDescriptionText.cpp  DataObjectDescriptionText.h  DataObjectState.h  DataObjectStateFactory.cpp  DataObjectStateFactory.h  DataObjectUnit.h  DataObjectValue.h  ErrorType.h  IDataObject.h  IFrameObject.h
src/cli/: CliHandler.cpp  CliHandler.h  CliHandling.cpp  CliHandling.h  CommandHandler.cpp  CommandHandler.h  CommandInfo.h
src/common/: conversion.cpp  conversion.h  endian.h
src/communication/: CanIsoTP.cpp  CanIsoTP.h  ELM327.cpp  ELM327.h  ELM327WifiClient.cpp  ELM327WifiClient.h  ELM327WifiServer.cpp  ELM327WifiServer.h  ELMClient.cpp  ELMClient.h  ICloseable.h  ICommunicationInterface.h  ISocketServer.h  ISocketServerClientHandler.h  SerialClient.cpp  SerialClient.h  SocketClient.cpp  SocketClient.h  SocketCommunicationBase.cpp  SocketCommunicationBase.h  SocketServer.cpp  SocketServer.h
src/ui/: CommandInfo.cpp  CommandInfo.h  VehicleDataProvider.cpp  VehicleDataProvider.h
src/ui/cli/: CliHandler.cpp  CliHandler.h  CommandHandler.cpp  CommandHandler.h  CommandInfo.h
src/ui/web/: Wamp.h
src/ui/webBackend/: Wamp.cpp  Wamp.h
src/ui/webFrontend/: package-lock.json  package.json
src/ui/webFrontend/doc/: pidVehicleSpeedQuery.json  service1query.json
src/ui/webFrontend/src/: autobahn.tsx  index.tsx  withRoot.tsx
src/ui/webFrontend/src/pages/: app.tsx  appdrawer.tsx  dashboard.tsx  loader.tsx  overview.tsx
src/ui/webFrontend/src/redux/: actions.tsx  localStorage.tsx  reducer.tsx
src/ui/webFrontend/src/ui/: PidDisplay.tsx  request.tsx
src/ui/webFrontend/src/utils/: common.tsx
src/ui/webFrontend/src/wamp/: Data.tsx  Pid.tsx  PidQuery.tsx  Service.tsx  ServiceQuery.tsx  autobahn.tsx
src/web/: Wamp.cpp  Wamp.h
tests/: getAll  main.cpp  runTravis.sh  setAll  travis.excludes
tests/src/: ConfigTest.cpp  MockCommInterface.cpp  MockCommInterface.h
tests/src/CAN/: CanIsoTPTests.cpp  ELM327WifiServerTest.cpp
tests/src/OBD/: DataTroubleCodeTest.cpp  OBDHandlerTest.cpp  OBDHandlerTest.h  OBDHandlerTestService1Explicit.cpp  OBDHandlerTestSimulatedCAN.cpp  OBDHandlerTests.cpp  OBDHandlerTestsService1.cpp  OBDHandlerTestsService2.cpp
tests/src/OBD/data/: DataObjectTest.cpp
tests/src/cli/: CommandHandlerTest.cpp
tests/src/communication/: CanIsoTPTests.cpp  ELM327WifiClientTest.cpp  ELM327WifiServerTest.cpp
